# youtube-metadata-generator

./: .gitignore  CONTRIBUTING.md  DEPENDENCIES.md  DEPLOYMENT.md  GITHUB_GUIDE.md  LICENSE  MOBILE_GUIDE.md  README.md  __init__.py  app.py  core.py  gen_meta.py  manifest.json  mobile_app.html  packages.txt  pyproject.toml  replit.md  requirements.txt  server.py  setup.py  sw.js  test_demo.py  test_setup.py
attached_assets/: Pasted-I-m-Patrick-a-YouTuber-Each-time-I-upload-I-manually-1-copy-the-video-link-2-paste-it-into-sa-1753413858029_1753413858030.txt
