[project]
name = "youtube-metadata-generator"
version = "1.0.0"
description = "A simple web app to extract YouTube captions and generate SEO-optimized titles and descriptions using Groq AI"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.30.0",
    "requests>=2.32.4",
    "streamlit>=1.47.0",
    "yt-dlp>=2025.7.21",
]
